Added put and delete methods instead of additional route urls
